--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,27 @@
-<h1>Make your form here</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+
+  <form method="POST" action="/pirates">
+    <label> Pirate
+    <p> Name: <input type="text" name="pirate[name]"></p>
+    <p> Weight: <input type="text" name="pirate[weight]"></p>
+    <p> Height: <input type="text" name="pirate[height]"></p></label>
+    <label> Ship 1
+    <p> Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]"></p>
+    <p> Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]"></p>
+    <p> Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"></p>
+    </label>
+    <label> Ship 2
+    <p> Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]"></p>
+    <p> Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]"></p>
+    <p> Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"></p>
+    </label>
+    <input type="submit" id="Submit">
+</form>
+  </body>
+</html>
